<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:rowCount="4"
    android:columnCount="1"
    android:layout_weight="1"
    android:layout_gravity="fill"
    android:layout_columnSpan="2">


<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="1"
    android:columnCount="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/look_at_my_gui"
        android:textSize="30dp" />
</GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2">
        <Button
            android:id="@+id/mybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/button" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/check_this_out" />

    </GridLayout>



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"

        android:columnCount="2">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/flag" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:minHeight="48dp"
            android:text="@string/switch_on_off" />

    </GridLayout>


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/type_here" />

</GridLayout>